--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,7 @@
 name: Android Build CI
 
 # Controls when the workflow will run
-on: [workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,6 +19,13 @@ jobs:
       - uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.2.3
+          
+      - name: Cache haxelib path
+        uses: actions/cache@v2
+        with:
+          path: |
+            %HAXELIB_ROOT%
+          key: ${{ runner.os }}-android
           
       - name: Setup Android SDK Tools
         uses: android-actions/setup-android@v2.0.2
@@ -36,7 +43,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: script run line haha
         run: |
-          mkdir "%HAXELIB_ROOT%"
+          mkdir -p "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install lime 7.9.0 --quiet
           haxelib install openfl --quiet
