--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -67,7 +67,7 @@ jobs:
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git --quiet
           haxelib install actuate 
           haxelib list
-          haxelib run lime build android
+          haxelib run lime build android -Dci
           
       - uses: actions/upload-artifact@v2
         with:
