--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,7 +55,7 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib install flixel-tools --quiet
-          haxelib install flixel-addons --quiet
+          haxelib install flixel-addons 2.10.0 --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons 2.10.0
