--- a/.github/workflows/check-android.yml
+++ b/.github/workflows/check-android.yml
@@ -26,19 +26,6 @@ jobs:
           path: |
             %HAXELIB_ROOT%
           key: ${{ runner.os }}-android
-          
-      - name: Setup Android SDK Tools
-        uses: android-actions/setup-android@v2.0.2
-        
-      - name: Setup Java JDK
-        uses: actions/setup-java@v2.3.1
-        with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '11'
-        
-      - uses: nttld/setup-ndk@v1
-        with:
-          ndk-version: r15c
 
       # Runs a set of commands using the runners shell
       - name: script run line haha
@@ -50,9 +37,6 @@ jobs:
           haxelib install flixel 4.9.0 --quiet
           haxelib run lime setup flixel
           haxelib run lime setup
-          haxelib run lime config ANDROID_SDK $ANDROID_SDK_ROOT
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_ROOT
-          haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib install flixel-tools --quiet
           haxelib install flixel-addons 2.10.0 --quiet
@@ -67,7 +51,9 @@ jobs:
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git --quiet
           haxelib install actuate 
           haxelib list
-          haxelib run lime build android -Dci
+          
+      - name: build logs
+        run: haxelib run lime build android -Dci
           
       - uses: actions/upload-artifact@v2
         with:
