--- a/.github/workflows/check-android.yml
+++ b/.github/workflows/check-android.yml
@@ -37,6 +37,9 @@ jobs:
           haxelib install flixel 4.9.0 --quiet
           haxelib run lime setup flixel
           haxelib run lime setup
+          haxelib run lime config ANDROID_SDK ANDROID_SDK_ROOT
+          haxelib run lime config ANDROID_NDK_ROOT ANDROID_NDK_ROOT
+          haxelib run lime config JAVA_HOME JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib install flixel-tools --quiet
           haxelib install flixel-addons 2.10.0 --quiet
