--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,6 +48,7 @@ jobs:
           haxelib install lime 7.9.0 --quiet
           haxelib install openfl --quiet
           haxelib install flixel 4.9.0 --quiet
+          haxelib install hxcpp --quiet
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib run lime config ANDROID_SDK $ANDROID_SDK_ROOT
