--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           haxe-version: 4.2.3
           
-      - name: Cache haxelib path
-        uses: actions/cache@v2
-        with:
-          path: |
-            %HAXELIB_ROOT%
-          key: ${{ runner.os }}-android
+#       - name: Cache haxelib path
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             %HAXELIB_ROOT%
+#           key: ${{ runner.os }}-android
           
       - name: Setup Android SDK Tools
         uses: android-actions/setup-android@v2.0.2
@@ -59,7 +59,7 @@ jobs:
           haxelib install flixel-addons 2.10.0 --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
-          haxelib install flixel-addons 2.10.0
+          haxelib install flixel-addons 2.10.0 --quiet
           haxelib git faxe https://github.com/uhrobots/faxe --quiet
           haxelib git polymod https://github.com/MasterEric/polymod.git --quiet
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc --quiet
