--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,10 +56,11 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib install flixel-tools --quiet
-          haxelib install flixel-addons 2.10.0 --quiet
+          haxelib install flixel-addons 2.11.0 --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons 2.10.0 --quiet
+          haxelib remove flixel-addons 2.11.0 --quiet
           haxelib git faxe https://github.com/uhrobots/faxe --quiet
           haxelib git polymod https://github.com/MasterEric/polymod.git --quiet
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc --quiet
