--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,17 +50,16 @@ jobs:
           haxelib install flixel 4.9.0 --quiet
           haxelib install hxcpp --quiet
           haxelib run lime setup flixel
+          haxelib remove flixel-addons --quiet
           haxelib run lime setup
           haxelib run lime config ANDROID_SDK $ANDROID_SDK_ROOT
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_ROOT
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib install flixel-tools --quiet
-          haxelib install flixel-addons 2.11.0 --quiet
           haxelib install flixel-ui --quiet
-          haxelib install hscript --quiet
           haxelib install flixel-addons 2.10.0 --quiet
-          haxelib remove flixel-addons 2.11.0 --quiet
+          haxelib install hscript --quiet
           haxelib git faxe https://github.com/uhrobots/faxe --quiet
           haxelib git polymod https://github.com/MasterEric/polymod.git --quiet
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc --quiet
@@ -69,7 +68,9 @@ jobs:
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git --quiet
           haxelib install actuate 
           haxelib list
-          haxelib run lime build android -Dci
+          
+      - name: funni build logs
+        run: haxelib run lime build android -Dci
           
       - uses: actions/upload-artifact@v2
         with:
