--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -46,6 +46,9 @@ jobs:
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
           haxelib install actuate 
           haxelib list
+          
+      - name: build logs
+        run: |
           haxelib run lime build windows
           
       - uses: actions/upload-artifact@v2
