--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -44,6 +44,7 @@ jobs:
           haxelib run lime rebuild extension-webm windows
           haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
+          haxelib git crashdumper http://github.com/larsiusprime/crashdumper
           haxelib install actuate 
           haxelib install newgrounds 
           haxelib list
